--- a/Guess The Flag updated - Project 6 HWS/Guess The Flag - project 6 HWS/Base.lproj/Main.storyboard
+++ b/Guess The Flag updated - Project 6 HWS/Guess The Flag - project 6 HWS/Base.lproj/Main.storyboard
@@ -33,39 +33,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1Q-VL-ywk">
-                                <rect key="frame" x="96.666666666666686" y="143" width="200" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="QLk-s6-DwT"/>
-                                    <constraint firstAttribute="height" constant="100" id="WnV-y0-J4j"/>
-                                </constraints>
+                                <rect key="frame" x="84.666666666666686" y="143" width="224" height="114"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="us"/>
                                 <connections>
                                     <action selector="flagWasTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bac-aN-KV8"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2LO-BL-JGU">
-                                <rect key="frame" x="96.666666666666686" y="403" width="200" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="4LH-7m-7T1"/>
-                                    <constraint firstAttribute="height" constant="100" id="kEe-Cl-f9e"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="monaco"/>
-                                <connections>
-                                    <action selector="flagWasTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="REy-by-UJd"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WYz-G0-Qz2">
-                                <rect key="frame" x="96.666666666666686" y="273" width="200" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="LPi-WO-Rgp"/>
-                                    <constraint firstAttribute="width" constant="200" id="Zlo-q6-EjW"/>
-                                </constraints>
+                                <rect key="frame" x="84.666666666666686" y="287" width="224" height="114"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="france"/>
                                 <connections>
                                     <action selector="flagWasTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MZ9-3b-xzi"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2LO-BL-JGU">
+                                <rect key="frame" x="84.666666666666686" y="431" width="224" height="114"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="monaco"/>
+                                <connections>
+                                    <action selector="flagWasTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="REy-by-UJd"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0V-RW-W8T">
@@ -78,6 +66,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="2LO-BL-JGU" secondAttribute="bottom" constant="20" id="8Af-ho-pKR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="t0V-RW-W8T" secondAttribute="bottom" id="9pe-8g-I35"/>
                             <constraint firstItem="2LO-BL-JGU" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Idv-4D-Ga0"/>
                             <constraint firstItem="W1Q-VL-ywk" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Mb5-UZ-AD6"/>
